--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,155 @@
--i https://pypi.org/simple
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jinja2==2.11.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-werkzeug==1.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+absl-py==0.11.0
+altgraph==0.10.2
+asn1crypto==0.24.0
+astor==0.8.1
+astroid==1.6.6
+backports-abc==0.5
+backports.functools-lru-cache==1.6.1
+backports.weakref==1.0.post1
+bcrypt==3.1.7
+bdist-mpkg==0.5.0
+beautifulsoup4==4.8.2
+bonjour-py==0.3
+bson==0.5.10
+cachetools==3.1.1
+certifi==2020.12.5
+cffi==1.14.0
+chardet==4.0.0
+Click==7.0
+configparser==4.0.2
+cryptography==2.6.1
+Cython==0.29.3
+decorator==4.0.11
+Django==1.11.18
+dnspython==1.16.0
+docopt==0.6.2
+enum34==1.1.10
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-PyMongo==2.3.0
+funcsigs==1.0.2
+functools32==3.2.3.post2
+future==0.18.2
+futures==3.3.0
+gast==0.2.2
+geocoder==1.38.1
+geographiclib==1.50
+geopy==1.22.0
+google-auth==1.24.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.35.0
+gTTS==2.0.4
+gTTS-token==1.1.3
+gunicorn==19.10.0
+h5py==2.10.0
+idna==2.10
+imageio==2.1.2
+InstagramAPI==1.0.2
+ipaddress==1.0.22
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Js2Py==0.67
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.4.3
+macholib==1.5.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==1.3.1
+mccabe==0.6.1
+mock==3.0.5
+modulegraph==0.10.4
+moviepy==0.2.3.2
+nose==1.3.7
+numpy==1.16.6
+oauthlib==3.1.0
+opt-einsum==2.3.2
+Pillow==6.1.0
+pipenv==2018.11.26
+playsound==1.2.2
+pprint==0.1
+protobuf==3.14.0
+py2app==0.7.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyjsparser==2.7.1
+pylint==1.9.5
+pymongo==3.10.1
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==19.0.0
+pyparsing==2.0.1
+PyPrind==2.11.2
+pystan==2.18.1.0
+python-dateutil==2.8.1
+pytz==2013.7
+PyYAML==5.3.1
+ratelim==0.1.6
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-toolbelt==0.7.0
+reverse-geocode==1.4
+robobrowser==0.5.3
+rsa==4.5
+scipy==1.2.2
+selenium==3.141.0
+Shapely==1.7.0
+singledispatch==3.4.0.3
+six==1.15.0
+soupsieve==1.9.5
+SpeechRecognition==3.8.1
+tensorboard==2.1.0
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+tensorflow-gpu==1.1.0
+termcolor==1.1.0
+tornado==5.1.1
+tqdm==4.11.2
+typing==3.7.4.1
+tzlocal==2.0.0
+urllib3==1.26.3
+uuid==1.30
+vboxapi==1.0
+virtualenv==16.2.0
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
+wikipedia==1.4.0
+wrapt==1.12.1
+xattr==0.6.4
